<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/toolbar_title"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/nav_services"
        android:textColor=" #000000 "
        android:textSize="25sp" />

    <ScrollView
        android:layout_below="@+id/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/expandableButton1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#69c9bf"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton1"
                android:paddingRight="10dp"
                android:text="@string/drycleaning"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton1"
                android:background="#90ba1f04"
                app:ael_duration="400"
                android:padding="16dp"
                app:ael_expanded="false"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:text="@string/ex_drycleaning">
                </TextView>
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            <Button
                android:id="@+id/expandableButton2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout1"
                android:background="#b77803"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton2"
                android:paddingRight="10dp"
                android:text="@string/washing"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton2"
                android:background="#90b77803"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:text="@string/ex_washing" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <Button
                android:id="@+id/expandableButton3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout2"
                android:background="#10a106"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton3"
                android:paddingRight="10dp"
                android:text="@string/ironing"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton3"
                android:background="#9010a106"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:text="@string/ex_ironing"
                    /></com.github.aakira.expandablelayout.ExpandableRelativeLayout>


            <Button
                android:id="@+id/expandableButton4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout3"
                android:background="#066da1"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton4"
                android:paddingRight="10dp"
                android:text="@string/coloring"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton4"
                android:background="#90066da1"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:text="@string/ex_coloring" />
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <!--Expandable button five Start-->

            <Button
                android:id="@+id/expandableButton5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout4"
                android:background="#45af75"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton5"
                android:paddingRight="10dp"
                android:text="@string/saree_roll_press"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton5"
                android:background="#fc8ac785"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:text="@string/ex_saree_roll_press"
                    /></com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <!--Expandable button five end-->

            <!--Expandable button six Start-->

            <Button
                android:id="@+id/expandableButton6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expandableLayout5"
                android:background="#80ac3f"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:onClick="expandableButton6"
                android:paddingRight="10dp"
                android:text="@string/saree_steam_press"
                android:textColor="#fff" />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:id="@+id/expandableLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/expandableButton6"
                android:background="#799784"
                android:padding="16dp"
                app:ael_duration="400"
                app:ael_expanded="false"
                app:ael_orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:text="@string/ex_saree_steam_press"
                    /></com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <!--Expandable button six end-->

        </RelativeLayout>


    </ScrollView>



</RelativeLayout>