<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#1082C1"
    >



    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_gravity="center"
        tools:context=".LoginActivity"
        >




        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_userName"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/loginedittext"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="16sp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                />
            <EditText
                android:id="@+id/login_password"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/loginedittext"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:padding="15dp"
                android:text="@string/login"
                android:background="#05C953 "
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/notmember"
            android:textSize="15sp" />

    </RelativeLayout>


</ScrollView>